/*
 * CHANGELOG.
 */

12222003 - Fixed a search-and-replace mistake in win32.c that preventing
           compiling on Windows. (thanks, Brian!)
12182003 - WAD archiver now puts maps into subdirectories, making them
           accessible to the application. (Thanks, Travis!) RPM spec and
           Makefile.am* now package zlib_license_change.txt (Thanks, Edward!)
12142003 - Added Doom WAD support (Thanks, Travis!)
12082003 - Fixed some win32.c deficiencies that Robby Dermody pointed
           out (thanks!)
12072003 - Upgraded internal zlib to 1.2.1 (thanks, Adam!) Other
           Unix build fixes.
11112003 - Patches to make OS/2 support compile again.
11092003 - Added __PHYSFS_platformStrnicmp(), and made qpak.c case-insensitive.
09122003 - Happy September. Actually released current tree as 0.1.9.
08262003 - Added MiNT support to build process and fixed cross-compiling
           (thanks Patrice Mandin!)
08092003 - Some Windows build fixes (thanks, Brian Hook!)
07232003 - Upped version to 0.1.9.
07202003 - Switched to zlib license (see new LICENSE text in root of source
           tree, and zlib_license_switch.txt for details). Had to remove
           archivers/qpak.c, the Ruby bindings from the extras directory, and
           the Russian and Spanish translations, since those contributors
           couldn't be contacted. If they show up, we'll readd them to the
           project, otherwise we'll eventually replace their work...everyone
           else signed on for the change. Committed a patch to convert all
           tabs to spaces (Thanks, James!). Added patch to zip.c to fix
           crash (thanks, dillo!). Reimplmented qpak.c, by welding together
           bits of grp.c and zip.c. Ed contacted me, so I could readd his
           contributions post-license change...I'm going to keep the new
           qpak.c, but I've readded his Ruby bindings and Russian translations.
06112003 - Patches to globbing.c to handle corner cases (thanks, Bradley!).